Add readme, publish

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
 RewriteRule vanilla.css - [L]
-RewriteRule feed.rss  index.php    [L,QSA]
-RewriteRule ^([A-Za-z.]+)/?$  index.php?ppub=$1    [L,QSA]
-RewriteRule ^([A-Za-z.]+)/([A-Za-z./]+)/?$  index.php?ppub=$1&asset=$2    [L,QSA]
+RewriteRule index.php - [L]
+RewriteRule ^(.+?(?=/))/(.*)/?$  index.php?ppub=$1&asset=$2    [L,QSA]
+RewriteRule ^(.+?(?=$|\/))$  index.php?ppub=$1    [L,QSA]
